--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "health-tracker",
-  "private": false,
+  "private": true,
   "version": "0.0.1",
   "type": "module",
   "scripts": {
@@ -18,6 +18,6 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.2.0"
+    "vite": "^4.2.2"
   }
 }
