--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,8 @@ jobs:
         with:
           name: production-files
           path: ./dist
+          if-no-files-found: error
+          working-directory: ./
 
   deploy:
     name: Deploy
@@ -43,9 +45,11 @@ jobs:
         with:
           name: production-files
           path: ./dist
+          working-directory: ./
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          publish_dir_prefix: ./dist
