--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "rsuite": "^5.32.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
